style.css
body {
	margin: 50px 50px;
}

article {
	background-color: #FEFAC0;
	display: block;
	border: solid black;
	float: right;
	width: 820px;
}

header {
	padding:
}

/*ARTICLE*/

.article-text {
	padding: 2px 0 5px 15px;
}

.song-title {
 color: #785616;
 padding: 0 0 5px 15px ;
}
/*FORMS*/
.music-form {
	background-color: #4DD7FA ;
}

#artists {
	display: block;

}

#albums {
	display: block;
}

form {
	margin: 0 auto;
    width : 200px;
    float: left;
    border: solid medium black;
}

.move-text {
	display: block;
	padding: 10px;
}

#genre1>ul>li {
	list-style-type: none;
}

#genre2>ul>li {
	list-style-type: none;
}


#genre1 {
	margin-left: -50px;
	float: left;
}

#genre2 {
	clear: both;
	float: right;
}

/* Nav */

.nav>nav>ul>li {
	clear:both;
	display: inline;
	padding: 2px;
}

.nav>nav {
	background-color:#FFB4B0;
	padding: 10px;
	font-style: Arial;
	font-size: 20px;
	border: black medium solid;
	margin: 10px;
}

